--- a/Connected_Users/web.config
+++ b/Connected_Users/web.config
@@ -1,11 +1,17 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
     <handlers>
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
     </handlers>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true">
+      <remove name="WebDAVModule" />
+      <!-- ADD THIS -->
+    </modules>
     <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" forwardWindowsAuthToken="false">
       <environmentVariables />
     </aspNetCore>
   </system.webServer>
 </configuration>
+<!--ProjectGuid: b2419028-4ad5-4adc-8b78-6b1e050ca556-->
